<resources>
    <string name="app_name">PractiCalculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tip">Tip</string>
    <string name="gpa">GPA</string>
    <string name="sale_price">Sale Price</string>
    <string name="bmi">Body Mass Index</string>
    <string name="unit">Unit Conversion</string>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="feet">ft</string>
    <string name="inches">in</string>
    <string name="meters">m</string>
    <string name="centimeters">cm</string>
    <string name="pounds">lbs</string>
    <string name="kilograms">kg</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="binary">Binary</string>
    <string name="about">About</string>
    <string name="title_activity_about">About PractiCalculator</string>

    <string name="aboutInformation"> <b>Tip</b> calculates a tip amount based on input percentage \n\n
        <b>Sale Price</b> shows how much a discount affects a price\n\n
        <b>GPA</b> calculates GPA based on a 4.0 scale (ie A = 4.0, A- = 3.67, …) \n\n
        <b>Binary</b> offers conversion between binary and decimal numbers \n\n
        <b>Body Mass Index</b> calculates BMI based on inputs
    </string>
</resources>
